OKE FINAL YA, TERIMA KASIH

--- a/Final_Project_Kelompok_2_Fix.ipynb
+++ b/Final_Project_Kelompok_2_Fix.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "tj8ao1Zh6itV",
-        "UNC550QS-uGV",
         "bZUPIElGCc2z"
       ]
     },
@@ -5286,7 +5284,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "|Segment|Score|\n",
+        "|Tipe|Harga|\n",
         "|---|---|\n",
         "|𝙎𝙩𝙪𝙙𝙞𝙤|mulai Rp400.528.105,- Jutaan|\n",
         "|𝟏𝘽𝙍|mulai Rp595.903.625,-Jutaan|\n",
